Resolve all currently reported issues

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,6 +1,9 @@
 {
   "@metadata": {
-    "authors": ["nordicnames.de  -- Malte Ahrholdt"]
+    "authors": [
+      "nordicnames.de  -- Malte Ahrholdt",
+      "colleirose.github.io - Collei"
+    ]
   },
-  "RemoveRedlinks-desc": "This extension disables red links."
+  "removeredlinks-desc": "This extension shows redlinks as text to logged-out users. Optionally, it can be configured to show redlinks as text for all users."
 }
